Fix social align button

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -636,3 +636,7 @@ Social Buttons
         margin-top: 7vh;
     }
 }
+
+.btn-block {
+    display: inline;
+}
